# bugpunch-sdk

./: .gitignore  ACTION_EXECUTOR.md  CHANGELOG.md  CLAUDE.md  INPUT_INJECTION.md  README.md  SCRIPTING.md  build-android.ps1  link.xml  package.json
.android-user/: analytics.settings
Ads/: BugpunchAdMob.cs  ODDGames.Bugpunch.Ads.asmdef
CodeGen/: MethodProfilerILPostProcessor.cs  Unity.Bugpunch.CodeGen.asmdef
Editor/: BugpunchMainToolbarToggle.cs  ODDGames.Bugpunch.Package.Editor.asmdef
Purchasing/: BugpunchPurchasing.cs  ODDGames.Bugpunch.Purchasing.asmdef
Samples/: ClickFeedback.cs  DraggableUI.cs  DropZoneUI.cs  GestureCube.cs  GestureTargetUI.cs  KeyHoldIndicator.cs  ODDGames.Bugpunch.Samples.asmdef  PanelSwitcher.cs
ScriptingUnity/: ODDGames.Scripting.Unity.asmdef  ScriptIdeServerHost.cs  ScriptRuntime.cs  UnityScriptConventions.cs
Tests/: ODDGames.Bugpunch.Tests.asmdef  UIAutomationTestFixture.cs
Tools/: upload-ios-symbols.sh
UITest/: UITestBehaviour.cs
WebRTC/: ODDGames.BugpunchSdk.WebRTC.asmdef  WebRTCStreamer.cs  WebRTCStreamerBootstrap.cs
android-src/: .gitignore  BugpunchPlugin.aar.meta.template  build.gradle  settings.gradle
android-src/bugpunch/src/main/cpp/: CMakeLists.txt  bp.c  bp_video.c  bp_video.h
cli/: Program.cs
csharp-src/: .gitignore  README.md
docs/: shake-spec.md  upload-manifest.md
ios-src/: .gitignore  Bugpunch.xcframework.meta.template
package/: ActionExecutor.Input.cs  ActionExecutor.UI.cs  ActionExecutor.cs  Bugpunch.cs  BugpunchClient.cs  BugpunchCrashHandler.cs  BugpunchDebugMode.cs  BugpunchInputCapture.cs  (+23 more)
(+1509 files in other folders)
